# hurry

./: .dockerignore  .env.example  .env.swp  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  clippy.toml  docker-compose.e2e.yml  docker-compose.yml  example.env  install.sh  rustfmt.toml
.agents/: patterns.md  style.md  testing.md  workflow.md
.claude/: settings.json
.claude/commands/: README.md  changes-commit.md  code-review.md  code-trace.md  conflicts-resolve.md  diff-trace.md  pr-comment-trace.md  pr-draft.md  resolution-verify.md
.claude/commands/.shared/: gather-pr-info.md  report-format.md  understand-intention.md  verify-build.md
.claude/skills/rust-programming/: SKILL.md
.claude/skills/rust-programming/references/: control-flow.md  indexing-patterns.md  naming.md
.claude/skills/rust-testing/: SKILL.md
.claude/skills/rust-testing/references/: assertion-patterns.md  parameterized-tests.md
.config/: nextest.toml
.github/: copilot-instructions.md
.github/actions/hurry-dev/: action.yml
.github/workflows/: benchmark.yml  claude-code-review.yml  claude.yml  e2e.yml  pr.yml  publish-courier.yml  release.yml
.nudge/: documentation.yaml  git-amend.yaml  rust-comments.yaml  rust-format.yaml  rust-imports.yaml  rust-modules.yaml  rust-strings.yaml  rust-testing.yaml  rust-types.yaml
.sqlx/: query-02612b42df112bd73cf265b6532f0e16e2e7747f4f1f0910830643f88eee9675.json  query-0575b4891942d1817acd3356296232029f37e963f3acafd642d775c222116d01.json  query-06af98ea5ab71417805faf9a9b831fed432cc8c43bf20a5f049b238ae04d13dc.json  query-09017d40369e30a8a4e0a93075a86495f944bdbd9a2634d4be4ab7f9d8dd9aed.json  query-0a33628d29a368ba3f190761b43ff51089aeabed821c80b3cc0b9166d57121f3.json  query-0b8e3a8f5d17c7d1fd3a8a2c903be0405cd32f2d2628f6006d96a179413402a1.json  query-0de1daf129498a1ee86075056d54ce37ba92d255759570a6b7ccf7c9ba0ee3d5.json  query-0f622b91f3d442c35129751fc287c946b546ce76fd996586e04c22638f4166bf.json  query-10c3c21b69d72a458e01fde1a7e236402b7c007a2f3780bfe2a364daa9c4de6f.json  query-10f0adb670f6569c6b2975a1a5c74dc11b2c923fb23ef5997f98818300da4e79.json  query-128090684ca8b8a128f6b8aad89dd17d91775dff689035254bbde1311ec4bc85.json  query-129cf7e69f2edf82fe799bf33e724e15603ce61cab9bec1030befe60bfe337ed.json  query-137d75793f825328d0c982f02c58cec7eb0b084fda600e64241eccd86ae49a20.json  query-15055f7d54e5f194b2c05b8f0ec9f2b6bf29ce4d2282366eca53b7ceee27543f.json  query-166cf388f89d85f1945032cf2bddbecbed6a068579fb6d54555e495ce36d991e.json  query-181e133aee3786640b6c35e6d7ee8731d284a16ea49aee0cc3fee5b4d4318856.json  query-1dac147d18c3a1161c5709655519391cf007f169407b91d9f0ea311b8f40bcf2.json  query-224e93cbb1a6eae8655e30ade65bbc40cf0b014b8fa4a1be2d112214e74b4769.json  query-27e885e70803c19faa891d242b7bd139d2ab35bf63353c1bbd20d36a7cc81791.json  query-2abda784f3c2ad254cacaf0e572e520942772303f6674932cedeaa9692a6fee0.json  query-2b490f4d73c1c254b610ecc18d430f9902946b49519509237f474a1ec376f8ad.json  query-2c0a4855f74f1099059daecfef4a52aa143f355230c40973e1bb36b3c6593358.json  query-2d3b6f0c6b7f8e446db5b2f2ffe3dfbebef2c7b2e811d83059c33d28152a6531.json  query-2de7130f5581625ccdefac228732a61283810d03da5da23542d320bc083d3270.json  query-2fb4db0308280296a54cba33575aed499f275b110c1350cade0e0ae9055ec968.json  query-34029351b2f54ad8bac97cb6ef2ca5549a7c6f6cec5cdd89f09599c00d7ea4e0.json  query-34273a752f4230e26c4d8a3e0bf82b494f21546d7eb36a82bc548ce39714a0d9.json  query-35681f132392d9e41db92b611677589a6c57e65c7797e13aeb91455e27dd6331.json  query-38eb4f6668da851baaabba4e5a95fbf142106adfc691da51695a84785b8204fa.json  query-39011f82d2ca7e3f1d81053107fe7bbc1ae0db0820870e43cf84a23a54e1ba1d.json  query-3b573c8e6af8d8d7b403ebde81e04c11ce9cb516af7dc865c5b8ba7cba6cc060.json  query-3ebe263b21c9185f8dc25a2a113fb60aa4e2314205f36dcae610123ab45a486d.json  query-3f639e2ed84f3bb1b50b55920b15b77b983e929cb171ff53a72638783135b059.json  query-40f1a0866be6a496b4ed11187982f8e488ca63b9e104cf230b84d1fe6035046d.json  query-477d7a6f83e2b70d899f854ac59297bcee86c74bbf02e5d0808d57f67d252457.json  query-477e28bc473b635324fe1965be8d5c430268487f33bc055cd61d70cbfa65f494.json  query-4a37a25d2bdf1b5ceb6212a3a3ecb9cbca08177174ccdd5be076b9fc2c889376.json  query-54ade66ab371cae6408e6d21056e6ec5d1a29c1e078af991cbc84d657989dcdc.json  query-57e8299308bdb70afeb42b66732ad66f2e025c24992ee6169e3c8b0a38b5463c.json  query-58555cecea797e7f05c2c9c9a2a6fa73f697000d65ffa9d5bae1a33dba44fd26.json  (+64 more)
docker/courier/: Dockerfile
docker/dev/: Dockerfile  entrypoint.sh
docker/hurry/: Dockerfile  Dockerfile.dockerignore
docker/hurry-sandbox-debian/: Dockerfile
docs/: DESIGN.md  self-hosting.md
docs/development/: cargo.md  devcontainer.md
docs/rfc/: 0001-courier.md  0003-self-service-signup.md
scripts/: diff-metatree.sh  diff-mtime.sh  diff-tree.sh  install.ps1  install.sh  ready.sh  release.sh  test-cross-targets.sh
scripts/api/: README.md  _common  bot-create  bot-list  invite-accept  invite-create  invite-list  invite-preview  invite-revoke  key-create  key-list  key-revoke  login  logout  me  member-remove  member-role  org-create  org-leave  org-list  org-members  validate
scripts/ci/: README.md  examples.sh  timeline.py
scripts/db/: README.md  account-create  account-delete  account-list  account-read  account-update  org-create  org-delete  org-list  org-read  org-update  token-create  token-list  token-lookup  token-revoke
scripts/support/: clone-org  list-orgs
src/: cargo.rs  cas.rs  fs.rs  hash.rs  main.rs
src/cargo/: cmd.rs  workspace.rs
src/cargo/cmd/: build.rs  run.rs
