[workspace]
resolver = "3"
members = ["packages/*"]

[workspace.dependencies]
ahash = "0.8.12"
atomic-time = "0.1.5"
blake3 = "1.8.2"
bon = "3.7.1"
cargo_metadata = "0.19.2"
clap = { version = "4.5", features = ["cargo", "derive", "string"] }
color-eyre = "0.6.5"
colored = "3.0.0"
derive_more = { version = "2.0.1", features = ["full"] }
enum-assoc = "1.2.4"
filetime = "0.2.25"
fslock = "0.2.1"
git-version = "0.3.9"
hex = "0.4.3"
homedir = "0.3.4"
inquire = "0.7.5"
itertools = "0.14.0"
location-macros = "0.1.2"
lockfile = "0.4.0"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
strum = { version = "0.27.2", features = ["derive"] }
subenum = "1.1.2"
tap = "1.0.1"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-flame = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-tree = { version = "0.4.0", features = ["time"] }
walkdir = "2.5.0"
async-walkdir = "2.1.0"
extfn = "0.1.3"
tokio = "1.47.1"
futures = "0.3.31"
divan = "0.1.21"
jwalk = "0.8.1"
pretty_assertions = "1.4.1"
tempfile = "3.21.0"
test-log = "0.2.18"
xshell = "0.2.7"
regex = "1.11.2"
const-str = "0.7.0"
duplicate = "2.0.0"
jiff = "0.2.15"
paste = "1.0.15"
home = "0.5.11"
