[workspace]
resolver = "3"
members = ["packages/*"]
exclude = ["packages/dashboard"]

[workspace.dependencies]
aerosol = "1.3.0"
async-compression = "0.4"
async-tar = "0.5.0"
async-tempfile = "0.7.0"
async-walkdir = "2.1.0"
atomic-time = "0.1.5"
axum = "0.8"
axum-test = "18.1.0"
base64 = "0.22.1"
blake3 = "1.8.2"
bollard = "0.19.2"
bon = "3.7.1"
cargo_metadata = "0.19.2"
clap = { version = "4.5", features = ["cargo", "derive", "string", "env"] }
clients = { path = "packages/clients" }
color-eyre = "0.6.5"
colored = "3.0.0"
console = "0.16.1"
const-str = "0.7.0"
dashmap = "6.1.0"
derive_more = { version = "2.0.1", features = ["full"] }
directories = "6.0.0"
divan = "0.1.21"
dotenvy = "0.15.7"
duplicate = "2.0.0"
enum-assoc = "1.2.4"
extfn = "0.1.3"
filetime = "0.2.25"
flume = "0.11.1"
fslock = "0.2.1"
futures = "0.3.31"
git-version = "0.3.9"
governor = "0.10.2"
hex = "0.4.3"
home = "0.5.11"
homedir = "0.3.4"
http = "1.3.1"
humansize = "2.1.3"
indicatif = "0.18.0"
inquire = "0.7.5"
is_executable = "1.0.5"
itertools = "0.14.0"
jiff = "0.2.15"
jwalk = "0.8.1"
lazy-regex = "3.4.1"
libc = "0.2.178"
monostate = "1.0.2"
num_cpus = "1.17.0"
oauth2 = "5.0.0"
parse-display = "0.10.0"
paste = "1.0.15"
piper = "0.2.4"
pretty_assertions = "1.4.1"
proptest = "1.8.0"
rand = "0.8.5"
rayon = "1.11.0"
reqwest = { version = "0.12.24", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
rustc-stable-hash = "0.1.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10.9"
signal-hook = "0.3.18"
simple_test_case = "1.3.0"
sqlx = "0.8.6"
strum = { version = "0.27.2", features = ["derive"] }
subenum = "1.1.2"
sysinfo = "0.37.2"
tap = "1.0.1"
tempfile = "3.21.0"
test-log = "0.2.18"
test-strategy = "0.4.3"
testcontainers = { git = "https://github.com/testcontainers/testcontainers-rs.git", rev = "9aae21e7330f3ad22a7742c82dd5eea465928510" }
time = { version = "=0.3.41", features = ["serde"] }
tokio = "1.47.1"
tokio-util = "0.7"
toml = "0.9.8"
tower = "0.5"
tower-http = "0.6"
tower_governor = "0.8.0"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-flame = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-tree = { version = "0.4.0", features = ["time"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = "1.18.1"
walkdir = "2.5.0"
workspace_root = "0.2.0"
xshell = "0.2.7"
zstd = "0.13"

[workspace.lints.clippy]
redundant_pattern_matching = "allow"
